[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/Level.gd" type="Script" id=1]
[ext_resource path="res://scenes/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://resouce/EnvironmentTileset.tres" type="TileSet" id=3]
[ext_resource path="res://resouce/CharTileset32.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Portal.tscn" type="PackedScene" id=7]

[sub_resource type="TileSet" id=1]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
player_packedscene = ExtResource( 5 )

[node name="EnvironmMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 655360, 0, 3, 655361, 0, 3, 655362, 0, 3, 655363, 0, 3, 655364, 0, 3, 655365, 0, 3, 655366, 0, 3, 655367, 0, 3, 655368, 0, 3, 655369, 0, 3, 655370, 0, 3, 655371, 0, 3, 655372, 0, 3, 655373, 0, 3, 655374, 0, 3, 655375, 0, 3, 655376, 0, 3, 655377, 0, 3, 655378, 0, 3, 655379, 0, 3, 720896, 0, 65539, 720897, 0, 65539, 720898, 0, 65539, 720899, 0, 65539, 720900, 0, 65539, 720901, 0, 65539, 720902, 0, 65539, 720903, 0, 65539, 720904, 0, 65539, 720905, 0, 65539, 720906, 0, 65539, 720907, 0, 65539, 720908, 0, 65539, 720909, 0, 65539, 720910, 0, 65539, 720911, 0, 65539, 720912, 0, 65539, 720913, 0, 65539, 720914, 0, 65539, 720915, 0, 65539 )

[node name="ActorMap16" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1

[node name="ActorMap32" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1, 0, 0 )

[node name="ActorMap64" type="TileMap" parent="."]
format = 1

[node name="ActorsContainer" type="Node2D" parent="."]

[node name="PickupContainer" type="Node2D" parent="."]

[node name="TriggerableContainer" type="Node2D" parent="."]

[node name="Portal" parent="TriggerableContainer" instance=ExtResource( 7 )]
position = Vector2( 296, 152 )

[node name="Pause" parent="." instance=ExtResource( 2 )]
visible = false
